--- a/src/server/views/account.jade
+++ b/src/server/views/account.jade
@@ -10,14 +10,20 @@ input(type='hidden', value= user._id)#userId
 		h6#sub1 Please tell us a little about yourself.
 		hr
 		.form-group
-			label.control-label.col-sm-3 Name
+			label.control-label.col-sm-3 FirstName
 			.col-sm-9
-				input.form-control#name-tf(type='text', name='name', value= user.name)
+				input.form-control#fname-tf(type='text', name='firstName', value= user.firstName)
+
+		.form-group
+			label.control-label.col-sm-3 LastName
+			.col-sm-9
+				input.form-control#lname-tf(type='text', name='lastName', value= user.lastName)
+
 
 		.form-group
 			label.control-label.col-sm-3 Email
 			.col-sm-9
-				input.form-control#email-tf(type='text', name='email', value= user.email)
+				input.form-control#email-tf(type='email', name='email', value= user.email)
 
 		.form-group
 			label.control-label.col-sm-3 Location
