--- a/src/server/views/account.jade
+++ b/src/server/views/account.jade
@@ -41,7 +41,7 @@ input(type='hidden', value= user._id)#userId
 		.form-group
 			label.control-label.col-sm-3 Password
 			.col-sm-9
-				input.form-control#pass-tf(type='password', name='pass', value='')
+				input.form-control#pass-tf(type='password', name='password', value='')
 
 		hr
 		.form-buttons
