--- a/src/server/views/login.jade
+++ b/src/server/views/login.jade
@@ -5,9 +5,11 @@ block content
 
 	#login.center-vertical
 		form.well(id='form-login', method='post')
-			h2 Hello!
-			h6 Please Login To Your Account
+			.text-center
+				h2 Welcome!
+				h6 Please Login To Your Account
 			.form-group
+			.background-opaq
 				label Username
 				input.form-control(type='text', id='user-tf', name='user')
 			.form-group
